--- a/myCourse/pom.xml
+++ b/myCourse/pom.xml
@@ -25,10 +25,21 @@
     </plugins>
   </build>
   <dependencies>
+  <dependency>
+	  <groupId>javafx</groupId>
+	  <artifactId>jfxrt</artifactId>
+	  <version>${java.version}</version>
+	  <scope>system</scope>
+	  <systemPath>${java.home}/lib/jfxrt.jar</systemPath>
+	</dependency>
   	<dependency>
   		<groupId>com.twilio.sdk</groupId>
   		<artifactId>twilio-java-sdk</artifactId>
   		<version>3.4.5</version>
   	</dependency>
   </dependencies>
+  <properties>
+  	<java.version>1.8</java.version>
+  	<java.home>C:\Program Files\Java\jre1.8.0_51</java.home>
+  </properties>
 </project>
