--- a/myCourse/pom.xml
+++ b/myCourse/pom.xml
@@ -19,6 +19,11 @@
     </plugins>
   </build>
   <dependencies>
+  <dependency>
+  		<groupId>org.jsoup</groupId>
+  		<artifactId>jsoup</artifactId>
+  		<version>1.8.3</version>
+  	</dependency>
   	<dependency>
   		<groupId>com.twilio.sdk</groupId>
   		<artifactId>twilio-java-sdk</artifactId>
